feat(frontend): block crawlers for the time being

--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -8,6 +8,8 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 
+		<meta name="robots" content="noindex" />
+
 		<!-- SCRIPT_LOADER -->
 		<!-- LINKS_PRELOADER -->
 	</head>
