feat(frontend): metadata

--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -4,8 +4,25 @@
 		<!-- CONTENT_SECURITY_POLICY -->
 
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
+
+		<title>Oisy wallet</title>
+		<link href="https://tewsx-xaaaa-aaaad-aadia-cai.icp0.io" rel="canonical" />
+		<meta
+				content="An Ethereum demo wallet hosted on the IC."
+				name="description"
+		/>
+		<meta content="Oisy wallet" property="og:title" />
+		<meta content="An Ethereum demo wallet hosted on the IC" property="og:description" />
+		<meta content="website" property="og:type" />
+		<meta content="https://tewsx-xaaaa-aaaad-aadia-cai.icp0.io" property="og:url" />
+		<meta content="https://tewsx-xaaaa-aaaad-aadia-cai.icp0.io/images/meta-share.jpg" property="og:image" />
+		<meta content="summary_large_image" name="twitter:card" />
+		<meta content="Oisy wallet" name="twitter:title" />
+		<meta content="An Ethereum demo wallet hosted on the IC" name="twitter:description" />
+		<meta content="https://tewsx-xaaaa-aaaad-aadia-cai.icp0.io/images/meta-share.jpg" name="twitter:image" />
+		<meta content="@dfinity" name="twitter:creator" />
+
 		%sveltekit.head%
 
 		<meta name="robots" content="noindex" />
