build(frontend): bump alchemy, few dev dependencies and prettier

--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<!-- CONTENT_SECURITY_POLICY -->
@@ -58,7 +58,8 @@
 		<meta name="msapplication-TileColor" content="#51347b" />
 		<meta name="msapplication-config" content="%sveltekit.assets%/favicons/browserconfig.xml" />
 
-		<meta content=#51347b" name="theme-color" /> %sveltekit.head%
+		<meta content="#51347b" name="theme-color" />
+		%sveltekit.head%
 
 		<meta name="robots" content="noindex" />
 
