build(frontend): description and metadata

--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -6,24 +6,18 @@
 		<meta charset="utf-8" />
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 
-		<title>Oisy wallet</title>
-		<link href="https://tewsx-xaaaa-aaaad-aadia-cai.icp0.io" rel="canonical" />
-		<meta content="An Ethereum demo wallet hosted on the IC" name="description" />
-		<meta content="Oisy wallet" property="og:title" />
-		<meta content="An Ethereum demo wallet hosted on the IC" property="og:description" />
+		<title>{{VITE_OISY_NAME}}</title>
+		<link href="{{VITE_OISY_URL}}" rel="canonical" />
+		<meta content="{{VITE_OISY_DESCRIPTION}}" name="description" />
+		<meta content="{{VITE_OISY_NAME}}" property="og:title" />
+		<meta content="{{VITE_OISY_DESCRIPTION}}" property="og:description" />
 		<meta content="website" property="og:type" />
-		<meta content="https://tewsx-xaaaa-aaaad-aadia-cai.icp0.io" property="og:url" />
-		<meta
-			content="https://tewsx-xaaaa-aaaad-aadia-cai.icp0.io/images/meta-share.jpg"
-			property="og:image"
-		/>
+		<meta content="{{VITE_OISY_URL}}" property="og:url" />
+		<meta content="{{VITE_OISY_URL}}/images/meta-share.jpg" property="og:image" />
 		<meta content="summary_large_image" name="twitter:card" />
-		<meta content="Oisy wallet" name="twitter:title" />
-		<meta content="An Ethereum demo wallet hosted on the IC" name="twitter:description" />
-		<meta
-			content="https://tewsx-xaaaa-aaaad-aadia-cai.icp0.io/images/meta-share.jpg"
-			name="twitter:image"
-		/>
+		<meta content="{{VITE_OISY_NAME}}" name="twitter:title" />
+		<meta content="{{VITE_OISY_DESCRIPTION}}" name="twitter:description" />
+		<meta content="{{VITE_OISY_URL}}/images/meta-share.jpg" name="twitter:image" />
 		<meta content="@dfinity" name="twitter:creator" />
 
 		<link crossorigin="anonymous" href="/manifest.webmanifest" rel="manifest" />
@@ -46,7 +40,7 @@
 		<!-- iOS meta tags & icons -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="#51347b" />
-		<meta name="apple-mobile-web-app-title" content="Oisy wallet" />
+		<meta name="apple-mobile-web-app-title" content="{{VITE_OISY_NAME}}" />
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/favicons/apple-touch-icon.png" />
 		<link
 			rel="mask-icon"
