--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -7,17 +7,17 @@
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 
 		<title>{{VITE_OISY_NAME}}</title>
-		<link href="{{VITE_OISY_URL}}" rel="canonical" />
+		<link href="https://oisy.com" rel="canonical" />
 		<meta content="{{VITE_OISY_DESCRIPTION}}" name="description" />
 		<meta content="{{VITE_OISY_NAME}}" property="og:title" />
 		<meta content="{{VITE_OISY_DESCRIPTION}}" property="og:description" />
 		<meta content="website" property="og:type" />
-		<meta content="{{VITE_OISY_URL}}" property="og:url" />
-		<meta content="{{VITE_OISY_URL}}/images/meta-share.jpg" property="og:image" />
+		<meta content="https://oisy.com" property="og:url" />
+		<meta content="https://oisy.com/images/meta-share.jpg" property="og:image" />
 		<meta content="summary_large_image" name="twitter:card" />
 		<meta content="{{VITE_OISY_NAME}}" name="twitter:title" />
 		<meta content="{{VITE_OISY_DESCRIPTION}}" name="twitter:description" />
-		<meta content="{{VITE_OISY_URL}}/images/meta-share.jpg" name="twitter:image" />
+		<meta content="https://oisy.com/images/meta-share.jpg" name="twitter:image" />
 		<meta content="@dfinity" name="twitter:creator" />
 
 		<link crossorigin="anonymous" href="/manifest.webmanifest" rel="manifest" />
