feat(frontend): update social image and theme color

--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -39,20 +39,20 @@
 
 		<!-- iOS meta tags & icons -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="#51347b" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="#33156A" />
 		<meta name="apple-mobile-web-app-title" content="{{VITE_OISY_NAME}}" />
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/favicons/apple-touch-icon.png" />
 		<link
 			rel="mask-icon"
 			href="%sveltekit.assets%/favicons/safari-pinned-tab.svg"
-			color="#51347b"
+			color="#33156A"
 		/>
 
 		<!-- MS -->
-		<meta name="msapplication-TileColor" content="#51347b" />
+		<meta name="msapplication-TileColor" content="#33156A" />
 		<meta name="msapplication-config" content="%sveltekit.assets%/favicons/browserconfig.xml" />
 
-		<meta content="#51347b" name="theme-color" />
+		<meta content="#33156A" name="theme-color" />
 		%sveltekit.head%
 
 		<meta name="robots" content="noindex" />
