Revert "feat: allow crawlers (#430)"
This reverts commit 1b5f2a576eb2480478fd7d14712631f459866e68.

--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -55,6 +55,8 @@
 		<meta content="#33156A" name="theme-color" />
 		%sveltekit.head%
 
+		<meta name="robots" content="noindex" />
+
 		<style>
 			body {
 				background: #fcfaf6;
