style: more discreet loading spinner

--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -64,6 +64,8 @@
 			#app-spinner {
 				--spinner-size: 30px;
 
+				color: #c0bbc4;
+
 				width: var(--spinner-size);
 				height: var(--spinner-size);
 
