feat(frontend): add auto events

--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -49,6 +49,7 @@
 		/>
 
 		<script data-allow-params="token,network" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+		<script async src="https://scripts.simpleanalyticscdn.com/auto-events.js"></script>
 
 		<!-- MS -->
 		<meta name="msapplication-TileColor" content="#016DFC" />
