feat(frontend): document.body is undefined, the DOM Node seems to be in document

--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -140,7 +140,7 @@
 				var observer = new MutationObserver(callback);
 
 				// Here we start observing the page for changes
-				observer.observe(document.body, { childList: true, subtree: true });
+				observer.observe(document, { childList: true, subtree: true });
 			})();
 		</script>
 
