--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<!-- CONTENT_SECURITY_POLICY -->
+		<!-- CONTENT_SECURITY_POLICY TOOT -->
 
 		<meta charset="utf-8" />
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
