No asset upgrade

--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-	<head class="CHNAGEDETECT bonkers">
+	<head class="CHNAGEDETECT oldwasm">
 		<!-- CONTENT_SECURITY_POLICY -->
 
 		<meta charset="utf-8" />
