--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-	<head class="CHNAGEDETECT q834uflihuehai8lvhea">
+	<head class="CHNAGEDETECT qd3i4hfkcsjadfvx2">
 		<!-- CONTENT_SECURITY_POLICY -->
 
 		<meta charset="utf-8" />
