--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" theme="light">
 	<head>
 		<!-- CONTENT_SECURITY_POLICY -->
 
@@ -59,7 +59,7 @@
 
 		<style>
 			:root {
-				background: #e8f1ff;
+				background: var(--color-brand-100);
 			}
 
 			#app-spinner {
