--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -59,7 +59,8 @@
 
 		<style>
 			:root {
-				background: var(--color-brand-100);
+				background: var(--color-background-page);
+				color: var(--color-foreground-page);
 			}
 
 			#app-spinner {
