set default bg and text color instead of hardcoded value in root

--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -80,7 +80,8 @@
 
 		<style>
 			:root {
-				background: #e8f1ff;
+				background: var(--color-background-page);
+				color: var(--color-foreground-primary);
 			}
 
 			#app-spinner {
