--- a/src/frontend/src/app.html
+++ b/src/frontend/src/app.html
@@ -81,7 +81,7 @@
 		<style>
 			:root {
 				background: var(--color-background-page);
-				color: var(--color-foreground-page);
+				color: var(--color-foreground-primary);
 			}
 
 			#app-spinner {
